--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     </html>
-    <h1>A historia da minha vida
-      <p>Bem vindo,hoje irei contar sobre minha vida 
+    <h1> A historia de monkey de luffy <h1>
+      <p>Nascido em East Blue, Monkey D. Luffy é um rapaz com um sonho bem ambicioso: desde 
+criança, ele sonhava em ser pirata! com sete anos de idade ele conheceu o capitão pirata Shanks,
+seu maior ídolo! Desde aquela época, ele desejava fazer parte da tripulação de Shanks e viajar pelo 
+mundo 
 </htlm>
 </body>
